--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "LanguageDistributions",
+  "name": "readme-language-update",
   "main": "src/index.ts",
+  "version": "1.0.0",
+  "author": "Darjow",
   "scripts": {
     "start": "ts-node --esm src/index.ts"
   },
   "dependencies": {
     "@octokit/types": "9.2.3",
+    "dotenv": "^16.1.4",
     "octokit": "2.0.19"
   },
   "devDependencies": {
