--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "1.0.0",
   "author": "Darjow",
   "scripts": {
-    "start": "ts-node --esm src/index.ts"
+    "start": "ts-node --esm src/index.ts",
+    "build": "tsc -p tsconfig.json"
+
   },
   "dependencies": {
     "@octokit/types": "9.2.3",
